--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-SERVER_PORT=3000
-CONNECTION_STRING_DB="mongodb+srv://hazielortiz04:022124Haziel@cluster0.ewjuf1n.mongodb.net/groceriesDb?retryWrites=true&w=majority"
+SERVER_PORT=3500
+CONNECTION_STRING_DB="mongodb+srv://hazielortiz04:022124Haziel@cluster0.ewjuf1n.mongodb.net/groceriesdb?retryWrites=true&w=majority"
